# llas

./: .env  .gitignore  LICENSE  README.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  network.rs  processor.rs
src-tauri/src/room/: mod.rs
ui/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/lib/components/: AudioControls.svelte  AudioDeviceManager.svelte  AudioMeter.svelte  NetworkStatus.svelte  RoomList.svelte  UserList.svelte  UserSetup.svelte
ui/src/lib/stores/: audioStore.ts  networkStore.ts  roomStore.ts  userStore.ts
ui/src/lib/types/: audio.ts  network.ts  user.ts
