[package]
name = "llas"
version = "0.1.0"
description = "LLAS - Low Latency Audio System"
authors = [BrokenHypocrite]
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "llas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha" }
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opus = "0.3"
cpal = "0.15"
ringbuf = "0.3"
byteorder = "1.4"
hmac = "0.12"
sha1 = "0.10"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"  # For efficient mutex handling
