[package]
name = "llas"
version = "0.1.0"
description = "LLAS - Low Latency Audio System"
authors = ["BrokenHypocrite"]
edition = "2021"

[lib]
# The `_lib` suffix is used to keep the library name unique.
name = "llas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "^2.2.5"
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opus = "0.3"
cpal = "0.15"
ringbuf = "0.3"
byteorder = "1.4"
hmac = "0.12"
sha1 = "0.10"
rand = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
atomic_float = "1.1"
dotenv = "0.15"
